# C-Deep-Learning-Framework

./: CMakeLists.txt  README.md  main.c  mnist_test_data_tiny.h  model_params.h  network.c
include/: conv2d.h  flatten.h  layer.h  linear.h  maxpool2d.h  network.h  operator.h  relu.h
layer/: conv2d.c  flatten.c  linear.c  maxpool2d.c  relu.c
